Added: reload current library action in main activity. Added: local scanner now removes empty artists/genres/albums/etc. Added: PlayDesc - play store description. Updated: code cleanup (database management) Updated: code cleanup (ui package in providers)

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -61,6 +61,7 @@
     
 	<string name="menu_label_collection">Bibliothèque</string>
 	<string name="menu_label_share">Partager</string>
+    <string name="menu_label_reload">Recharger</string>
 	<string name="menu_label_audio_effects">Effets audios</string>
 	<string name="menu_label_sleep_timer">Arret automatique</string>
 	<string name="menu_label_toggle_car_mode">Entrer/sortir du mode voiture</string>
