--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="menu_label_search">Search</string>
     <string name="menu_label_collection">Library</string>
     <string name="menu_label_share">Share</string>
+    <string name="menu_label_reload">Reload</string>
     <string name="menu_label_audio_effects">Audio effects</string>
     <string name="menu_label_sleep_timer">Sleep Timer</string>
     <string name="menu_label_toggle_car_mode">Toggler car mode</string>
