--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,7 @@
     <string name="menu_label_audio_effects">Audio effects</string>
     <string name="menu_label_sleep_timer">Sleep Timer</string>
     <string name="menu_label_toggle_car_mode">Toggler car mode</string>
+    <string name="menu_label_delayed_pause">Delayed pause</string>
     <string name="menu_label_settings">Settings</string>
     <string name="menu_label_add_directory">Add directory</string>
     <string name="menu_label_add_library">Add a library</string>
@@ -174,10 +175,10 @@
         <item quantity="one">Pausing music in %1$d minute</item>
         <item quantity="other">Pausing music in %1$d minutes</item>
     </plurals>
-    <plurals name="label_track_count">
+    <plurals name="label_track_position">
         <item quantity="zero">Empty playlist</item>
-        <item quantity="one">%1$d item in playlist</item>
-        <item quantity="other">%1$d items in playlist</item>
+        <item quantity="one">%1$d tracks in playlist</item>
+        <item quantity="other">%1$d tracks in playlist</item>
     </plurals>
 
     <string name="toast_press_back_again">Press BACK again to exit"</string>
