--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,7 +153,6 @@
     <string name="fs_audio">Audio File</string>
     <string name="header_interface">Interface</string>
     <string name="header_media_scanner">Media Scanner</string>
-    <string name="header_storage">Storage</string>
     <string name="header_about">About</string>
 
     <!-- UI/Other -->
@@ -181,7 +180,6 @@
     <string name="label_settings">Settings</string>
     <string name="label_library_settings">Manage libraries</string>
 
-    <string name="label_library_settings_location">Locations</string>
     <string name="label_library_settings_soundfx">Sound effects</string>
     <string name="label_library_settings_general">Library settings</string>
 
@@ -236,13 +234,8 @@
     <string name="library_global_settings_title">Libraries</string>
     <string name="library_global_settings_desc">Here you can add and manage your libraries.\nLong press a line to edit or remove a library.\nYou can\'t remove default library.</string>
 
-    <string name="preference_appearance_screen_title">Appearance</string>
-    <string name="preference_headset_screen_title">Headsets and bluetooth</string>
-    <string name="preference_other_options_screen_title">Other options</string>
-    <string name="preference_about_screen_title">About</string>
 
-    <string name="preference_online_help">Online help</string>
-    <string name="preference_licenses_title">Open source Licenses</string>
+
 
     <string name="preference_various_artists_default_value">Various artists</string>
     <string name="preference_unknown_artists_default_value">Unknown artist</string>
@@ -251,13 +244,85 @@
     <string name="progress_dialog_global">Main database</string>
     <string name="progress_dialog_pct">Database : %1$s/%2$s</string>
 
-    <string name="loc_preference_collection_screen_title">Media Library</string>
 
-    <string name="loc_preference_optimize_database">Optimize database</string>
-    <string name="loc_preference_clear_art_cache">Clear art temporary memory</string>
 
-    <string name="loc_preference_collection_tab_visibility_dialog_title">Enabled tabs</string>
-    <string name="loc_preference_collection_tab_visibility_summary">Select what tabs are shown in music library</string>
+    <!-- Global preferences -->
+    <string name="preference_screen_title_storage">Storage</string>
+    <string name="preference_category_title_cache_size">Cache size</string>
+    <string name="preference_title_cache_size">Covers</string>
+    <string name="preference_title_thumbnail_cache_size">Cover thumbnails</string>
+    <string name="preference_category_title_maintainance">Maintainance operations</string>
+    <string name="preference_title_optimize_database">Optimize database</string>
+    <string name="preference_title_clear_cache">Clear cache memory</string>
+
+    <string name="preference_screen_title_headphones">Headphones and audio outputs</string>
+    <string name="preference_title_plug_auto_play">Auto start playback</string>
+    <string name="preference_summary_plug_auto_play">Auto start playback when connecting audio output to the device</string>
+    <string name="preference_title_pause_call">Auto pause</string>
+    <string name="preference_summary_pause_call">Auto pause playback when receiving call</string>
+
+    <string name="preference_screen_title_about">Help / About</string>
+    <string name="preference_title_premium">Premium mode</string>
+    <string name="preference_title_online_help">Online help</string>
+    <string name="preference_title_opensource">Open source Licenses</string>
+
+    <!-- Local preferences -->
+    <string name="preference_category_title_collection">Media Library</string>
+    <string name="preference_title_settings_location">Locations</string>
+    <string name="preference_summary_settings_location">Define paths to scan and to exclude for this library</string>
+
+    <string name="preference_category_title_display">Display</string>
+    <string name="preference_title_tab_visibility">Enabled tabs</string>
+    <string name="preference_summary_tab_visibility">Select what tabs are shown in music library</string>
+    <string name="preference_title_storage_display_details">Details in file explorer</string>
+    <string name="preference_summary_storage_display_details">Display media details instead of file names (may be slow when visualizing lots of files at once).</string>
+    <string name="preference_title_genre_display">Details of genres</string>
+    <string name="preference_summary_genre_display"></string>
+
+    <string name="preference_list_value_genre_show_albums">Display albums</string>
+    <string name="preference_list_value_genre_show_tracks">Display tracks</string>
+
+    <!-- Units -->
+    <string name="unit_MB">%s MB</string>
+
+
+
+
+    <!-- Global Preferences keys -->
+    <string name="preference_screen_key_global">screen_key_global</string>
+
+    <string name="preference_key_cache_size">cache_size</string>
+    <string name="preference_key_thumbnail_cache_size">thumbnail_cache_size</string>
+    <string name="preference_key_optimize_database">optimize_database</string>
+    <string name="preference_key_clear_cache">clear_cache</string>
+    <string name="preference_key_plug_auto_play">plug_auto_play</string>
+    <string name="preference_key_pause_call">pause_call</string>
+    <string name="preference_key_premium">premium</string>
+    <string name="preference_key_online_help">online_help</string>
+    <string name="preference_key_opensource">opensource</string>
+
+    <!-- Local preference keys -->
+    <string name="preference_key_settings_location">settings_location</string>
+    <string name="preference_key_tab_visibility">tab_visibility</string>
+    <string name="preference_key_storage_display_details">storage_display</string>
+    <string name="preference_key_genre_display">genre_display</string>
+
+
+    <!-- Preference values -->
+    <string-array name="preference_values_tab_visibility">
+        <item>@string/tab_playlists</item>
+        <item>@string/tab_artists</item>
+        <item>@string/tab_album_artists</item>
+        <item>@string/tab_albums</item>
+        <item>@string/tab_songs</item>
+        <item>@string/tab_genres</item>
+        <item>@string/tab_storage</item>
+    </string-array>
+
+    <string-array name="preference_values_genre_details">
+        <item>@string/preference_list_value_genre_show_albums</item>
+        <item>@string/preference_list_value_genre_show_tracks</item>
+    </string-array>
 
     <!-- Equalizer view -->
     <string name="label_enable_equalizer">Enable Equalizer</string>
