--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,7 +4,7 @@
 
 
     <!-- Application name -->
-    <string name="application_label" translatable="false">OpusAMP</string>
+<!--    <string name="application_label" translatable="false">OpusAMP</string>-->
 
 
 
