--- a/opusapp/src/main/res/values/strings.xml
+++ b/opusapp/src/main/res/values/strings.xml
@@ -1,63 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-
-
     <!-- Application name -->
     <string name="application_label" translatable="false">OpusAMP</string>
 
-
-
     <!-- Service -->
     <string name="service_label">Audio Media Player</string>
-
-
 
     <!-- Widget -->
     <string name="widget_label_4x1">Audio Player (4x1)</string>
     <string name="widget_label_4x2">Audio Player (4x2)</string>
     <string name="widget_content_start_app">Open audio player for medias</string>
 
-
-
     <!-- Activities -->
     <string name="activity_title_preferences">Preferences</string>
     <string name="activity_title_library_path">Search settings</string>
     <string name="activity_title_library_management">Libraries</string>
     <string name="activity_label_files_to_scan">Files to scan</string>
-
     <string name="activity_label_deezer_signin">Connection to Deezer service</string>
     <string name="activity_label_deezer_signout">Disconnect</string>
 
-
-
     <!-- Dialogs -->
     <string name="alert_dialog_title_album_properties">Album properties</string>
-
     <string name="alert_dialog_title_media_properties">Media properties</string>
-
     <string name="alert_dialog_title_playlist_is_empty">Playlist is empty</string>
     <string name="alert_dialog_message_playlist_is_empty">There is no tracks to play !\nFirst, add something in playlist.</string>
-
     <string name="alert_dialog_title_playlist_delete">Confirmation</string>
     <string name="alert_dialog_message_playlist_delete">Do you really want to delete this playlist ?</string>
-
     <string name="alert_dialog_title_art_change_tracks">Question</string>
     <string name="alert_dialog_message_art_change_tracks">Update tracks with this art ?</string>
-
     <string name="alert_dialog_title_search_path_exists">Path already registered</string>
     <string name="alert_dialog_message_search_path_exists">This folder is already to be analyzed or excluded.</string>
-
     <string name="alert_dialog_title_add_to_playlist">@string/menuitem_label_add_to_playlist</string>
-
     <string name="alert_dialog_title_premium_hint">Trial period has expired.</string>
     <string name="alert_dialog_message_premium_hint">Ads will be displayed occasionally unless you buy premium mode.</string>
     <string name="alert_dialog_title_premium_positive_button">Buy premium</string>
     <string name="alert_dialog_title_premium_negative_button">Ignore</string>
-
     <string name="alert_dialog_title_type_of_library">Type of library</string>
-
-
 
     <!-- Global preferences -->
     <string name="preference_screen_title_storage">Storage</string>
@@ -67,61 +46,47 @@
     <string name="preference_category_title_maintainance">Maintenance operations</string>
     <string name="preference_title_optimize_database">Optimize database</string>
     <string name="preference_title_clear_cache">Clear cache memory</string>
-
     <string name="preference_default_various_artists">Various artists</string>
     <string name="preference_default_unknown_artist">Unknown artist</string>
-
     <string name="preference_dialog_title_database_optimization">Data optimization</string>
     <string name="progress_dialog_label_global_database">Main database</string>
     <string name="progress_dialog_label_current_database">Database : %1$s/%2$s</string>
-
     <string name="preference_screen_title_headphones">Headphones and audio outputs</string>
     <string name="preference_title_plug_auto_play">Auto start playback</string>
     <string name="preference_summary_plug_auto_play">Auto start playback when connecting audio output to the device</string>
     <string name="preference_title_pause_call">Auto pause</string>
     <string name="preference_summary_pause_call">Auto pause playback when receiving call</string>
-
     <string name="preference_screen_title_about">Help / About</string>
     <string name="preference_title_premium">Premium mode</string>
     <string name="preference_title_online_help">Online help</string>
     <string name="preference_title_opensource">Open source Licenses</string>
 
-
-
     <!-- Local preferences -->
     <string name="preference_category_title_collection">Media Library</string>
     <string name="preference_title_settings_location">Locations</string>
     <string name="preference_summary_settings_location">Define paths to scan and to exclude for this library</string>
-
     <string name="preference_category_title_display">Display</string>
     <string name="preference_title_tab_visibility">Enabled tabs</string>
     <string name="preference_summary_tab_visibility">Select what tabs are shown in music library</string>
     <string name="preference_title_storage_display_details">Details in file explorer</string>
     <string name="preference_summary_storage_display_details">Display media details instead of file names (may be slow when visualizing lots of files at once).</string>
     <string name="preference_title_genre_display">Details of genres</string>
-    <!--<string name="preference_summary_genre_display"></string>-->
+    <!-- <string name="preference_summary_genre_display"></string> -->
 
     <string name="preference_list_value_genre_show_albums">Display albums</string>
     <string name="preference_list_value_genre_show_tracks">Display tracks</string>
-
-
 
     <!-- Menu -->
     <string name="menuitem_label_sort">Sort order</string>
     <string name="menuitem_label_filter">Filter</string>
     <string name="menuitem_label_reload">Reload</string>
     <string name="menuitem_label_show_hidden">Show hidden items</string>
-
     <string name="menuitem_label_share">Share</string>
     <string name="menuitem_label_toggle_car_mode">Car mode</string>
     <string name="menuitem_label_delayed_pause">Auto pause</string>
     <string name="menuitem_label_delayed_pause_in">Auto pause (%1$s)</string>
-
     <string name="menuitem_label_add_directory">Add directory</string>
     <string name="menuitem_label_add_library">Add a library</string>
-
-
-
     <string name="menuitem_label_play">Play</string>
     <string name="menuitem_label_play_next">Play next</string>
     <string name="menuitem_label_add_to_queue">Add to queue</string>
@@ -135,9 +100,6 @@
     <string name="menuitem_label_edit">Edit</string>
     <string name="menuitem_label_use_file_art">Change this cover (from file)</string>
     <string name="menuitem_label_restore_file_art">Restore original cover</string>
-
-
-
     <string name="label_sort_A_Z">A-Z</string>
     <string name="label_sort_Z_A">Z-A</string>
     <string name="label_track_asc">Track # asc.</string>
@@ -149,28 +111,21 @@
     <string name="label_sort_album_A_Z">Album A-Z</string>
     <string name="label_sort_album_Z_A">Album Z-A</string>
 
-
-
     <!-- View specific labels -->
     <string name="actionbar_confirmation_text_done">Done</string>
     <string name="actionbar_confirmation_text_cancel">Cancel</string>
     <string name="actionbar_drawer_toggle_label_open">Open navigation menu</string>
     <string name="actionbar_drawer_toggle_label_close">Close navigation menu</string>
-
     <string name="drawer_section_label_media_management">Media management</string>
     <string name="drawer_section_label_label_settings">Settings</string>
     <string name="drawer_item_label_manage_libraries">Manage libraries</string>
     <string name="drawer_item_label_library_soundfx">Sound effects</string>
     <string name="drawer_item_label_library_settings">Library settings</string>
     <string name="drawer_item_label_application_settings">Application settings</string>
-
     <string name="searchview_query_hint">Search</string>
-
     <string name="toast_press_back_again">Press BACK again to exit"</string>
-
     <string name="tab_label_accept_path">Scanned</string>
     <string name="tab_label_exclude_path">Excluded</string>
-
     <string name="tab_label_artists">Artists</string>
     <string name="tab_label_album_artists">Album Artists</string>
     <string name="tab_label_albums">Albums</string>
@@ -178,7 +133,6 @@
     <string name="tab_label_playlists">Playlists</string>
     <string name="tab_label_genres">Genres</string>
     <string name="tab_label_storage">Files</string>
-
     <string name="imageview_content_description_art">Cover art</string>
     <string name="imageview_content_description_repeat">Repeat one or all</string>
     <string name="imageview_content_description_previous">Skip backwards</string>
@@ -189,16 +143,14 @@
     <string name="imageview_content_description_playlist">Show/Hide playlist</string>
     <string name="imageview_content_description_option_menu">Show option menu</string>
 
-
-
     <!-- Non ui -->
-
 
 
     <!-- Content properties -->
     <string name="label_metadata_unknown">unknown</string>
     <string name="label_metadata_album_track_count">Track count</string>
     <string name="label_metadata_album_duration">Duration</string>
+
     <plurals name="label_metadata_album_artists">
         <item quantity="zero">Artist</item>
         <item quantity="one">Artist</item>
@@ -227,47 +179,24 @@
     <string name="label_metadata_media_track">Track</string>
     <string name="label_metadata_media_disc">Disc</string>
 
-
     <!-- Setup -->
     <string name="label_setup_step1_title">"Let's get you set up"</string>
     <string name="label_setup_step1_description">It should only take a few moments to set up the app.</string>
-
-    <string name="label_setup_verifying_premium_title">Preparing&#8230;</string>
+    <string name="label_setup_verifying_premium_title">Preparing…</string>
     <string name="label_setup_verifying_premium_description">OpusAmp is verifying if you are a premium user.</string>
-
     <string name="label_setup_valid_premium_title">Premium mode</string>
     <string name="label_setup_valid_premium_description">You already acquired premium mode.\n\nEnjoy your music without limitations!</string>
-
     <string name="label_setup_invalid_premium_title">Premium mode</string>
     <string name="label_setup_invalid_premium_description">You don\'t have acquired premium mode.\nYou can do it later in application settings.\n\nWithout premium mode, you can use OpusAMP without any limitations, but after a period of 15 days, ads will be displayed occasionally.</string>
-
     <string name="label_setup_storage_title">Storage</string>
-    <string name="label_setup_storage_description">Define location of the default library on your Android&#8482; device.\nYou can customize paths or add other libraries later.</string>
+    <string name="label_setup_storage_description">Define location of the default library on your Android™ device.\nYou can customize paths or add other libraries later.</string>
     <string name="label_setup_scan_whole_storage">Whole external memory</string>
     <string name="label_setup_scan_specific_locations">Intended for music</string>
-
     <string name="label_internal_storage">Internal Storage</string>
     <string name="label_external_storage">External Storage </string>
 
     <!-- Units -->
     <string name="unit_MB">%s MB</string>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <string name="label_local_media_manager">Medias on this device</string>
     <string name="label_dlna_media_manager">Medias on the network (DLNA)</string>
     <string name="label_deezer_media_manager">Deezer</string>
@@ -276,12 +205,9 @@
     <string name="label_qobuz_media_manager">Qobuz</string>
     <string name="label_spotify_media_manager">Spotify</string>
 
-
-
     <!-- Deezer specific strings -->
     <string name="label_deezer_storage_thematic_radio">Thematic Radios</string>
     <string name="label_deezer_storage_artist_radio">Artist Radios</string>
-
 
     <!-- No items messages for library -->
     <string name="ni_artists">No artists</string>
@@ -290,24 +216,20 @@
     <string name="ni_genres">No genres</string>
     <string name="ni_files">No files</string>
     <string name="ni_providers">No libraries</string>
-
     <string name="ni_artists_hint">Check files location</string>
     <string name="ni_albums_hint">Check files location</string>
     <string name="ni_songs_hint">Check files location</string>
     <string name="ni_genres_hint">Check files location</string>
-
-
     <string name="ni_scan_directories">No directories</string>
     <string name="fs_parent_directory">Parent directory</string>
     <string name="fs_directory">Directory</string>
-
     <string name="label_new_playlist">New playlist</string>
     <string name="label_new_library">New library</string>
     <string name="label_favorites">Favorites</string>
     <string name="share_via">Share via</string>
     <string name="share_body">I\'m currently listening %1$s by %2$s.</string>
+    <string name="label_autostop">Pausing music in…</string>
 
-    <string name="label_autostop">Pausing music in&#8230;</string>
     <plurals name="label_autostop_set">
         <item quantity="zero">Pausing music is disabled</item>
         <item quantity="one">Pausing music in %1$d minute</item>
@@ -321,6 +243,6 @@
 
     <string name="label_select_cover">Select cover</string>
     <string name="label_default_library">Music Library</string>
-
     <string name="label_enable_equalizer">Enable Equalizer (experimental)</string>
+
 </resources>
